5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1630_2922.log
== TEST (2019-04-02 16:38:08) 
-- CODE:
qf=float("quantidade final:" )
qf=q1*(3+q1)*(22)
print(qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qf=float("quantidade final:" )
ValueError: could not convert string to float: 'quantidade final:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:47) 
-- CODE:
Qf=float("quantidade final:")
Qf=Q1*(3+Q1)*(22)
print(qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Qf=float("quantidade final:")
ValueError: could not convert string to float: 'quantidade final:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:01) 
-- CODE:
Qf=int(float("quantidade final:")
Qf=Q1*(3+Q1)*(22)
print(qf)

-- ERROR:
File "XXXX", line 2
    Qf=Q1*(3+Q1)*(22)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:10) 
-- CODE:
Qf=input(float("quantidade final:")
Qf=Q1*(3+Q1)*(22)
print(qf)

-- ERROR:
File "XXXX", line 2
    Qf=Q1*(3+Q1)*(22)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:26) 
-- CODE:
Qf=int(float("quantidade final:"))
Qf=Q1*(3+Q1)*(22)
print(qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Qf=int(float("quantidade final:"))
ValueError: could not convert string to float: 'quantidade final:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
